src/objects/graxopportunityindex__x/fields/Lost_Cancelled_Rejected_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Lost_Cancelled_Rejected_Reason_c__c</fullName>
    <description>Lost_Cancelled_Rejected_Reason__c</description>
    <externalDeveloperName>Lost_Cancelled_Rejected_Reason__c</externalDeveloperName>
    <label>Lost_Cancelled_Rejected_Reason__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>