src/objects/graxopportunityindex__x/fields/Lost_To_c__c.field-meta.xml
<CustomField>
    <fullName>Lost_To_c__c</fullName>
    <description>Lost_To__c</description>
    <externalDeveloperName>Lost_To__c</externalDeveloperName>
    <label>Lost_To__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>