src/objects/graxopportunityindex__x/fields/Lost_to_Details_c__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Details_c__c</fullName>
    <description>Lost_to_Details__c</description>
    <externalDeveloperName>Lost_to_Details__c</externalDeveloperName>
    <label>Lost_to_Details__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>