src/objects/graxopportunityindex__x/fields/Manufacturing_Cost_Attached_c__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Cost_Attached_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manufacturing_Cost_Attached__c</description>
    <externalDeveloperName>Manufacturing_Cost_Attached__c</externalDeveloperName>
    <label>Manufacturing_Cost_Attached__c</label>
    <type>Checkbox</type>
</CustomField>