src/objects/graxopportunityindex__x/fields/Margin_c__c.field-meta.xml
<CustomField>
    <fullName>Margin_c__c</fullName>
    <description>Margin__c</description>
    <externalDeveloperName>Margin__c</externalDeveloperName>
    <label>Margin__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>