src/objects/graxopportunityindex__x/fields/Market_c__c.field-meta.xml
<CustomField>
    <fullName>Market_c__c</fullName>
    <description>Market__c</description>
    <externalDeveloperName>Market__c</externalDeveloperName>
    <label>Market__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>