src/objects/graxopportunityindex__x/fields/Market_Segment_c__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment_c__c</fullName>
    <description>Market_Segment__c</description>
    <externalDeveloperName>Market_Segment__c</externalDeveloperName>
    <label>Market_Segment__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>