src/objects/graxopportunityindex__x/fields/Market_TEXT_c__c.field-meta.xml
<CustomField>
    <fullName>Market_TEXT_c__c</fullName>
    <description>Market_TEXT__c</description>
    <externalDeveloperName>Market_TEXT__c</externalDeveloperName>
    <label>Market_TEXT__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>