src/objects/graxopportunityindex__x/fields/Marketing_PN_c__c.field-meta.xml
<CustomField>
    <fullName>Marketing_PN_c__c</fullName>
    <description>Marketing_PN__c</description>
    <externalDeveloperName>Marketing_PN__c</externalDeveloperName>
    <label>Marketing_PN__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>