src/objects/graxopportunityindex__x/fields/Marlow_Image_c__c.field-meta.xml
<CustomField>
    <fullName>Marlow_Image_c__c</fullName>
    <description>Marlow_Image__c</description>
    <externalDeveloperName>Marlow_Image__c</externalDeveloperName>
    <label>Marlow_Image__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>