src/objects/graxopportunityindex__x/fields/Media_c__c.field-meta.xml
<CustomField>
    <fullName>Media_c__c</fullName>
    <description>Media__c</description>
    <externalDeveloperName>Media__c</externalDeveloperName>
    <label>Media__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>