src/objects/graxopportunityindex__x/fields/Mfr_Rep_Codes_c__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Rep_Codes_c__c</fullName>
    <description>Mfr_Rep_Codes__c</description>
    <externalDeveloperName>Mfr_Rep_Codes__c</externalDeveloperName>
    <label>Mfr_Rep_Codes__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>