src/objects/graxopportunityindex__x/fields/Min_Schedule_Date_Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Min_Schedule_Date_Opportunity_c__c</fullName>
    <description>Min_Schedule_Date_Opportunity__c</description>
    <externalDeveloperName>Min_Schedule_Date_Opportunity__c</externalDeveloperName>
    <label>Min_Schedule_Date_Opportunity__c</label>
    <type>Date</type>
</CustomField>