src/objects/graxopportunityindex__x/fields/Monthly_Exchange_Rate_Euros_to_USD_c__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Exchange_Rate_Euros_to_USD_c__c</fullName>
    <description>Monthly_Exchange_Rate_Euros_to_USD__c</description>
    <externalDeveloperName>Monthly_Exchange_Rate_Euros_to_USD__c</externalDeveloperName>
    <label>Monthly_Exchange_Rate_Euros_to_USD__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>