src/objects/graxopportunityindex__x/fields/Named_Place_c__c.field-meta.xml
<CustomField>
    <fullName>Named_Place_c__c</fullName>
    <description>Named_Place__c</description>
    <externalDeveloperName>Named_Place__c</externalDeveloperName>
    <label>Named_Place__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>