src/objects/graxopportunityindex__x/fields/Next_12_Months_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Next_12_Months_Revenue_c__c</fullName>
    <description>Next_12_Months_Revenue__c</description>
    <externalDeveloperName>Next_12_Months_Revenue__c</externalDeveloperName>
    <label>Next_12_Months_Revenue__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>