src/objects/graxopportunityindex__x/fields/Next_Action_Due_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Due_Date_c__c</fullName>
    <description>Next_Action_Due_Date__c</description>
    <externalDeveloperName>Next_Action_Due_Date__c</externalDeveloperName>
    <label>Next_Action_Due_Date__c</label>
    <type>Date</type>
</CustomField>