src/objects/graxopportunityindex__x/fields/Next_Step_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Comments_c__c</fullName>
    <description>Next_Step_Comments__c</description>
    <externalDeveloperName>Next_Step_Comments__c</externalDeveloperName>
    <label>Next_Step_Comments__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>