src/objects/graxopportunityindex__x/fields/Next_Version_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Version_c__c</fullName>
    <description>Next_Version__c</description>
    <externalDeveloperName>Next_Version__c</externalDeveloperName>
    <label>Next_Version__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>