src/objects/graxopportunityindex__x/fields/NextStep__c.field-meta.xml
<CustomField>
    <fullName>NextStep__c</fullName>
    <description>NextStep</description>
    <externalDeveloperName>NextStep</externalDeveloperName>
    <label>NextStep</label>
    <length>128</length>
    <type>Text</type>
</CustomField>