src/objects/graxopportunityindex__x/fields/No_of_line_items_c__c.field-meta.xml
<CustomField>
    <fullName>No_of_line_items_c__c</fullName>
    <description>No_of_line_items__c</description>
    <externalDeveloperName>No_of_line_items__c</externalDeveloperName>
    <label>No_of_line_items__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>