src/objects/graxopportunityindex__x/fields/No_Of_Products_c__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Products_c__c</fullName>
    <description>No_Of_Products__c</description>
    <externalDeveloperName>No_Of_Products__c</externalDeveloperName>
    <label>No_Of_Products__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>