src/objects/graxopportunityindex__x/fields/No_Quote_to_Add_via_Salesforce_c__c.field-meta.xml
<CustomField>
    <fullName>No_Quote_to_Add_via_Salesforce_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No_Quote_to_Add_via_Salesforce__c</description>
    <externalDeveloperName>No_Quote_to_Add_via_Salesforce__c</externalDeveloperName>
    <label>No_Quote_to_Add_via_Salesforce__c</label>
    <type>Checkbox</type>
</CustomField>