src/objects/graxopportunityindex__x/fields/Non_Released_Product_c__c.field-meta.xml
<CustomField>
    <fullName>Non_Released_Product_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non_Released_Product__c</description>
    <externalDeveloperName>Non_Released_Product__c</externalDeveloperName>
    <label>Non_Released_Product__c</label>
    <type>Checkbox</type>
</CustomField>