src/objects/graxopportunityindex__x/fields/Non_U_S_Customer_c__c.field-meta.xml
<CustomField>
    <fullName>Non_U_S_Customer_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non_U_S_Customer__c</description>
    <externalDeveloperName>Non_U_S_Customer__c</externalDeveloperName>
    <label>Non_U_S_Customer__c</label>
    <type>Checkbox</type>
</CustomField>