src/objects/graxopportunityindex__x/fields/Number_c__c.field-meta.xml
<CustomField>
    <fullName>Number_c__c</fullName>
    <description>Number__c</description>
    <externalDeveloperName>Number__c</externalDeveloperName>
    <label>Number__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>