src/objects/graxopportunityindex__x/fields/Open_Won_or_Lost_c__c.field-meta.xml
<CustomField>
    <fullName>Open_Won_or_Lost_c__c</fullName>
    <description>Open_Won_or_Lost__c</description>
    <externalDeveloperName>Open_Won_or_Lost__c</externalDeveloperName>
    <label>Open_Won_or_Lost__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>