src/objects/graxopportunityindex__x/fields/Opp_Amt_c__c.field-meta.xml
<CustomField>
    <fullName>Opp_Amt_c__c</fullName>
    <description>Opp_Amt__c</description>
    <externalDeveloperName>Opp_Amt__c</externalDeveloperName>
    <label>Opp_Amt__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>