src/objects/graxopportunityindex__x/fields/Opp_Product_Program_c__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Program_c__c</fullName>
    <description>Opp_Product_Program__c</description>
    <externalDeveloperName>Opp_Product_Program__c</externalDeveloperName>
    <label>Opp_Product_Program__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>