src/objects/graxopportunityindex__x/fields/Opportunity_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_c__c</fullName>
    <description>Opportunity_Number__c</description>
    <externalDeveloperName>Opportunity_Number__c</externalDeveloperName>
    <label>Opportunity_Number__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>