src/objects/graxopportunityindex__x/fields/Opportunity_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Score_c__c</fullName>
    <description>Opportunity_Score__c</description>
    <externalDeveloperName>Opportunity_Score__c</externalDeveloperName>
    <label>Opportunity_Score__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>