src/objects/graxopportunityindex__x/fields/OppStageAlert_Stage_Age_c__c.field-meta.xml
<CustomField>
    <fullName>OppStageAlert_Stage_Age_c__c</fullName>
    <description>OppStageAlert__Stage_Age__c</description>
    <externalDeveloperName>OppStageAlert__Stage_Age__c</externalDeveloperName>
    <label>OppStageAlert__Stage_Age__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>