src/objects/graxopportunityindex__x/fields/OppStageAlert_Stage_Modified_Date_c__c.field-meta.xml
<CustomField>
    <fullName>OppStageAlert_Stage_Modified_Date_c__c</fullName>
    <description>OppStageAlert__Stage_Modified_Date__c</description>
    <externalDeveloperName>OppStageAlert__Stage_Modified_Date__c</externalDeveloperName>
    <label>OppStageAlert__Stage_Modified_Date__c</label>
    <type>Date</type>
</CustomField>