src/objects/graxopportunityindex__x/fields/OwnerId_grax_xf_user__c.field-meta.xml
<CustomField>
    <fullName>OwnerId_grax_xf_user__c</fullName>
    <description>OwnerId_grax_xf_user</description>
    <externalDeveloperName>OwnerId_grax_xf_user</externalDeveloperName>
    <label>OwnerId_grax_xf_user</label>
    <length>128</length>
    <type>Text</type>
</CustomField>