src/objects/graxopportunityindex__x/fields/Parent_c__c.field-meta.xml
<CustomField>
    <fullName>Parent_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Parent__c</description>
    <externalDeveloperName>Parent__c</externalDeveloperName>
    <label>Parent__c</label>
    <type>Checkbox</type>
</CustomField>