src/objects/graxopportunityindex__x/fields/Partials_Permitted_c__c.field-meta.xml
<CustomField>
    <fullName>Partials_Permitted_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partials_Permitted__c</description>
    <externalDeveloperName>Partials_Permitted__c</externalDeveloperName>
    <label>Partials_Permitted__c</label>
    <type>Checkbox</type>
</CustomField>