src/objects/graxopportunityindex__x/fields/PartnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountId__c</fullName>
    <description>PartnerAccountId</description>
    <externalDeveloperName>PartnerAccountId</externalDeveloperName>
    <label>PartnerAccountId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>