src/objects/graxopportunityindex__x/fields/PartnerAccountId_grax_xf_account__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountId_grax_xf_account__c</fullName>
    <description>PartnerAccountId_grax_xf_account</description>
    <externalDeveloperName>PartnerAccountId_grax_xf_account</externalDeveloperName>
    <label>PartnerAccountId_grax_xf_account</label>
    <length>128</length>
    <type>Text</type>
</CustomField>