src/objects/graxopportunityindex__x/fields/PBCR_c__c.field-meta.xml
<CustomField>
    <fullName>PBCR_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PBCR__c</description>
    <externalDeveloperName>PBCR__c</externalDeveloperName>
    <label>PBCR__c</label>
    <type>Checkbox</type>
</CustomField>