src/objects/graxopportunityindex__x/fields/PDP_STAGE_c__c.field-meta.xml
<CustomField>
    <fullName>PDP_STAGE_c__c</fullName>
    <description>PDP_STAGE__c</description>
    <externalDeveloperName>PDP_STAGE__c</externalDeveloperName>
    <label>PDP_STAGE__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>