src/objects/graxopportunityindex__x/fields/PLC_Gate_Status_c__c.field-meta.xml
<CustomField>
    <fullName>PLC_Gate_Status_c__c</fullName>
    <description>PLC_Gate_Status__c</description>
    <externalDeveloperName>PLC_Gate_Status__c</externalDeveloperName>
    <label>PLC_Gate_Status__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>