src/objects/graxopportunityindex__x/fields/PO_Number_c__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_c__c</fullName>
    <description>PO_Number__c</description>
    <externalDeveloperName>PO_Number__c</externalDeveloperName>
    <label>PO_Number__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>