src/objects/graxopportunityindex__x/fields/Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Id__c</fullName>
    <description>Pricebook2Id</description>
    <externalDeveloperName>Pricebook2Id</externalDeveloperName>
    <label>Pricebook2Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>