src/objects/graxopportunityindex__x/fields/Pricebook2Id_grax_xf_pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Id_grax_xf_pricebook2__c</fullName>
    <description>Pricebook2Id_grax_xf_pricebook2</description>
    <externalDeveloperName>Pricebook2Id_grax_xf_pricebook2</externalDeveloperName>
    <label>Pricebook2Id_grax_xf_pricebook2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>