src/objects/graxopportunityindex__x/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>Probability</description>
    <externalDeveloperName>Probability</externalDeveloperName>
    <label>Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>