src/objects/graxopportunityindex__x/fields/Probable_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Probable_Amount_c__c</fullName>
    <description>Probable_Amount__c</description>
    <externalDeveloperName>Probable_Amount__c</externalDeveloperName>
    <label>Probable_Amount__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>