src/objects/graxopportunityindex__x/fields/Product_Record_Count_Text_Copy_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Count_Text_Copy_c__c</fullName>
    <description>Product_Record_Count_Text_Copy__c</description>
    <externalDeveloperName>Product_Record_Count_Text_Copy__c</externalDeveloperName>
    <label>Product_Record_Count_Text_Copy__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>