src/objects/graxopportunityindex__x/fields/Profit_c__c.field-meta.xml
<CustomField>
    <fullName>Profit_c__c</fullName>
    <description>Profit__c</description>
    <externalDeveloperName>Profit__c</externalDeveloperName>
    <label>Profit__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>