src/objects/graxopportunityindex__x/fields/Project_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_c__c</fullName>
    <description>Project_Name__c</description>
    <externalDeveloperName>Project_Name__c</externalDeveloperName>
    <label>Project_Name__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>