src/objects/graxopportunityindex__x/fields/Projected_Completion_c__c.field-meta.xml
<CustomField>
    <fullName>Projected_Completion_c__c</fullName>
    <description>Projected_Completion__c</description>
    <externalDeveloperName>Projected_Completion__c</externalDeveloperName>
    <label>Projected_Completion__c</label>
    <type>Date</type>
</CustomField>