src/objects/graxopportunityindex__x/fields/Push_Counter_c__c.field-meta.xml
<CustomField>
    <fullName>Push_Counter_c__c</fullName>
    <description>Push_Counter__c</description>
    <externalDeveloperName>Push_Counter__c</externalDeveloperName>
    <label>Push_Counter__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>