src/objects/graxopportunityindex__x/fields/QR_Date_Reminder_Option_Days_c__c.field-meta.xml
<CustomField>
    <fullName>QR_Date_Reminder_Option_Days_c__c</fullName>
    <description>QR_Date_Reminder_Option_Days__c</description>
    <externalDeveloperName>QR_Date_Reminder_Option_Days__c</externalDeveloperName>
    <label>QR_Date_Reminder_Option_Days__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>