src/objects/graxopportunityindex__x/fields/Qual_Required_c__c.field-meta.xml
<CustomField>
    <fullName>Qual_Required_c__c</fullName>
    <description>Qual_Required__c</description>
    <externalDeveloperName>Qual_Required__c</externalDeveloperName>
    <label>Qual_Required__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>