src/objects/graxopportunityindex__x/fields/Quotation_Notes_c__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Notes_c__c</fullName>
    <description>Quotation_Notes__c</description>
    <externalDeveloperName>Quotation_Notes__c</externalDeveloperName>
    <label>Quotation_Notes__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>