src/objects/graxopportunityindex__x/fields/Quote_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_Count_c__c</fullName>
    <description>Quote_Count__c</description>
    <externalDeveloperName>Quote_Count__c</externalDeveloperName>
    <label>Quote_Count__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>