src/objects/graxopportunityindex__x/fields/Quote_Request_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Date_c__c</fullName>
    <description>Quote_Request_Date__c</description>
    <externalDeveloperName>Quote_Request_Date__c</externalDeveloperName>
    <label>Quote_Request_Date__c</label>
    <type>Date</type>
</CustomField>