src/objects/graxopportunityindex__x/fields/Quote_Validity_Duration_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_Duration_c__c</fullName>
    <description>Quote_Validity_Duration__c</description>
    <externalDeveloperName>Quote_Validity_Duration__c</externalDeveloperName>
    <label>Quote_Validity_Duration__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>