src/objects/graxopportunityindex__x/fields/REACH_c__c.field-meta.xml
<CustomField>
    <fullName>REACH_c__c</fullName>
    <description>REACH__c</description>
    <externalDeveloperName>REACH__c</externalDeveloperName>
    <label>REACH__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>