src/objects/graxopportunityindex__x/fields/Reason_Lost_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost_c__c</fullName>
    <description>Reason_Lost__c</description>
    <externalDeveloperName>Reason_Lost__c</externalDeveloperName>
    <label>Reason_Lost__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>