src/objects/graxopportunityindex__x/fields/Received_By_c__c.field-meta.xml
<CustomField>
    <fullName>Received_By_c__c</fullName>
    <description>Received_By__c</description>
    <externalDeveloperName>Received_By__c</externalDeveloperName>
    <label>Received_By__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>