src/objects/graxopportunityindex__x/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <description>RecordTypeId</description>
    <externalDeveloperName>RecordTypeId</externalDeveloperName>
    <label>RecordTypeId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>