src/objects/graxopportunityindex__x/fields/RecordTypeId_grax_xf_recordtype__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId_grax_xf_recordtype__c</fullName>
    <description>RecordTypeId_grax_xf_recordtype</description>
    <externalDeveloperName>RecordTypeId_grax_xf_recordtype</externalDeveloperName>
    <label>RecordTypeId_grax_xf_recordtype</label>
    <length>128</length>
    <type>Text</type>
</CustomField>