src/objects/graxopportunityindex__x/fields/Region_c__c.field-meta.xml
<CustomField>
    <fullName>Region_c__c</fullName>
    <description>Region__c</description>
    <externalDeveloperName>Region__c</externalDeveloperName>
    <label>Region__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>