src/objects/graxopportunityindex__x/fields/Renewed_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Date_c__c</fullName>
    <description>Renewed_Date__c</description>
    <externalDeveloperName>Renewed_Date__c</externalDeveloperName>
    <label>Renewed_Date__c</label>
    <type>Date</type>
</CustomField>