src/objects/graxopportunityindex__x/fields/Rep_Firm_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Rep_Firm_Name_c__c</fullName>
    <description>Rep_Firm_Name__c</description>
    <externalDeveloperName>Rep_Firm_Name__c</externalDeveloperName>
    <label>Rep_Firm_Name__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>