src/objects/graxopportunityindex__x/fields/Rep_Firm_Name_c_grax_xf_account__c.field-meta.xml
<CustomField>
    <fullName>Rep_Firm_Name_c_grax_xf_account__c</fullName>
    <description>Rep_Firm_Name__c_grax_xf_account</description>
    <externalDeveloperName>Rep_Firm_Name__c_grax_xf_account</externalDeveloperName>
    <label>Rep_Firm_Name__c_grax_xf_account</label>
    <length>128</length>
    <type>Text</type>
</CustomField>