src/objects/graxopportunityindex__x/fields/Rep_Outside_Sales_c__c.field-meta.xml
<CustomField>
    <fullName>Rep_Outside_Sales_c__c</fullName>
    <description>Rep_Outside_Sales__c</description>
    <externalDeveloperName>Rep_Outside_Sales__c</externalDeveloperName>
    <label>Rep_Outside_Sales__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>