src/objects/graxopportunityindex__x/fields/Request_to_delete_c__c.field-meta.xml
<CustomField>
    <fullName>Request_to_delete_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Request_to_delete__c</description>
    <externalDeveloperName>Request_to_delete__c</externalDeveloperName>
    <label>Request_to_delete__c</label>
    <type>Checkbox</type>
</CustomField>