src/objects/graxopportunityindex__x/fields/Requested_Information_c__c.field-meta.xml
<CustomField>
    <fullName>Requested_Information_c__c</fullName>
    <description>Requested_Information__c</description>
    <externalDeveloperName>Requested_Information__c</externalDeveloperName>
    <label>Requested_Information__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>