src/objects/graxopportunityindex__x/fields/Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_c__c</fullName>
    <description>Revenue__c</description>
    <externalDeveloperName>Revenue__c</externalDeveloperName>
    <label>Revenue__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>