src/objects/graxopportunityindex__x/fields/RFQ_c__c.field-meta.xml
<CustomField>
    <fullName>RFQ_c__c</fullName>
    <description>RFQ__c</description>
    <externalDeveloperName>RFQ__c</externalDeveloperName>
    <label>RFQ__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>