src/objects/graxopportunityindex__x/fields/ROI_Analysis_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>ROI_Analysis_Completed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ROI_Analysis_Completed__c</description>
    <externalDeveloperName>ROI_Analysis_Completed__c</externalDeveloperName>
    <label>ROI_Analysis_Completed__c</label>
    <type>Checkbox</type>
</CustomField>