src/objects/graxopportunityindex__x/fields/RSM_c__c.field-meta.xml
<CustomField>
    <fullName>RSM_c__c</fullName>
    <description>RSM__c</description>
    <externalDeveloperName>RSM__c</externalDeveloperName>
    <label>RSM__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>