src/objects/graxopportunityindex__x/fields/RSM_c_grax_xf_user__c.field-meta.xml
<CustomField>
    <fullName>RSM_c_grax_xf_user__c</fullName>
    <description>RSM__c_grax_xf_user</description>
    <externalDeveloperName>RSM__c_grax_xf_user</externalDeveloperName>
    <label>RSM__c_grax_xf_user</label>
    <length>128</length>
    <type>Text</type>
</CustomField>