src/objects/graxopportunityindex__x/fields/RSM_Region_c__c.field-meta.xml
<CustomField>
    <fullName>RSM_Region_c__c</fullName>
    <description>RSM_Region__c</description>
    <externalDeveloperName>RSM_Region__c</externalDeveloperName>
    <label>RSM_Region__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>