src/objects/graxopportunityindex__x/fields/Sales_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_c__c</fullName>
    <description>Sales_Channel__c</description>
    <externalDeveloperName>Sales_Channel__c</externalDeveloperName>
    <label>Sales_Channel__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>