src/objects/graxopportunityindex__x/fields/Sales_Channel_c_grax_xf_account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_c_grax_xf_account__c</fullName>
    <description>Sales_Channel__c_grax_xf_account</description>
    <externalDeveloperName>Sales_Channel__c_grax_xf_account</externalDeveloperName>
    <label>Sales_Channel__c_grax_xf_account</label>
    <length>128</length>
    <type>Text</type>
</CustomField>