src/objects/graxopportunityindex__x/fields/Sales_Order_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number_c__c</fullName>
    <description>Sales_Order_Number__c</description>
    <externalDeveloperName>Sales_Order_Number__c</externalDeveloperName>
    <label>Sales_Order_Number__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>