src/objects/graxopportunityindex__x/fields/Sales_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type_c__c</fullName>
    <description>Sales_Type__c</description>
    <externalDeveloperName>Sales_Type__c</externalDeveloperName>
    <label>Sales_Type__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>