src/objects/graxopportunityindex__x/fields/Sandbox_Import_Marker_c__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Import_Marker_c__c</fullName>
    <description>Sandbox_Import_Marker__c</description>
    <externalDeveloperName>Sandbox_Import_Marker__c</externalDeveloperName>
    <label>Sandbox_Import_Marker__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>