src/objects/graxopportunityindex__x/fields/Segment_c__c.field-meta.xml
<CustomField>
    <fullName>Segment_c__c</fullName>
    <description>Segment__c</description>
    <externalDeveloperName>Segment__c</externalDeveloperName>
    <label>Segment__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>