src/objects/graxopportunityindex__x/fields/Ship_Method_c__c.field-meta.xml
<CustomField>
    <fullName>Ship_Method_c__c</fullName>
    <description>Ship_Method__c</description>
    <externalDeveloperName>Ship_Method__c</externalDeveloperName>
    <label>Ship_Method__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>