src/objects/graxopportunityindex__x/fields/Shipping_Carrier_c__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier_c__c</fullName>
    <description>Shipping_Carrier__c</description>
    <externalDeveloperName>Shipping_Carrier__c</externalDeveloperName>
    <label>Shipping_Carrier__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>