src/objects/graxopportunityindex__x/fields/Shipping_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Comments_c__c</fullName>
    <description>Shipping_Comments__c</description>
    <externalDeveloperName>Shipping_Comments__c</externalDeveloperName>
    <label>Shipping_Comments__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>