src/objects/graxopportunityindex__x/fields/Special_Instructions_c__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_c__c</fullName>
    <description>Special_Instructions__c</description>
    <externalDeveloperName>Special_Instructions__c</externalDeveloperName>
    <label>Special_Instructions__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>