src/objects/graxopportunityindex__x/fields/Stage_Closed_Lost_c__c.field-meta.xml
<CustomField>
    <fullName>Stage_Closed_Lost_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stage_Closed_Lost__c</description>
    <externalDeveloperName>Stage_Closed_Lost__c</externalDeveloperName>
    <label>Stage_Closed_Lost__c</label>
    <type>Checkbox</type>
</CustomField>