src/objects/graxopportunityindex__x/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <description>StageName</description>
    <externalDeveloperName>StageName</externalDeveloperName>
    <label>StageName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>