src/objects/graxopportunityindex__x/fields/Status_c__c.field-meta.xml
<CustomField>
    <fullName>Status_c__c</fullName>
    <description>Status__c</description>
    <externalDeveloperName>Status__c</externalDeveloperName>
    <label>Status__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>